contact hamburger list item hover fix bg hover even tho no hover on mobile

--- a/src/scenes/app/contact/theme.css
+++ b/src/scenes/app/contact/theme.css
@@ -95,6 +95,10 @@
 
       &:hover {
         background: var(--sd-offWhite);
+
+        @media (--sd-mobile) {
+          background: var(--sd-primary);
+        }
       }
     }
 
